tests/snapshots/edit__remove_input@follows_only_toplevel_treefmt-nix.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - treefmt-nix
---
{
  description = "Test flake with follows-only top-level inputs";

  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
  inputs.harmonia.url = "github:nix-community/harmonia";
  inputs.sizelint.follows = "nixpkgs";

  outputs = _: { };
}
