tests/snapshots/edit__remove_input@one_level_nesting_flat_nixpkgs.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        id: nixpkgs
---
{
  description = "Edit your flake inputs with ease";

  inputs = {
    flake-utelinos.url = "github:numtide/flake-utils";
    rust-overlay.url = "github:oxalica/rust-overlay";
    rust-overlay.inputs.flake-utils.follows = "flake-utils";
    crane.url = "github:ipetkov/crane";
    crane.inputs.rust-overlay.follows = "rust-overlay";
    crane.inputs.flake-utils.follows = "flake-utils";
  };

  outputs =
    {
      self,
      flake-utils,
      flake-utelinos,
      rust-overlay,
      crane,
    }:
    { };
}
