tests/snapshots/edit__remove_input@outputs_at_leading_comma_fenix.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - fenix
---
{
  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixpkgs-unstable";
  };

  outputs =
    { self
    , nixpkgs
    }@inputs:
    { };
}
