tests/snapshots/edit__remove_input@outputs_at_remove_first_nixpkgs-lib.snap
---
source: tests/edit.rs
assertion_line: 144
expression: result
info:
  flake_nix: ""
  changes:
    - Remove:
        ids:
          - nixpkgs-lib
---
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
  };

  outputs = inputs@{ nixpkgs, ... }:
    { };
}
